Added route to new hotel

--- a/views/hotels/index.ejs
+++ b/views/hotels/index.ejs
@@ -36,7 +36,7 @@
       <div class="col s12 m3">
         <div class="card">
           <div class="card-image">
-            <img src="img/hotel_sample.jpg">
+            <img src="/img/hotel_sample.jpg">
             <span class="card-title">Awesome Hotel</span>
             <a class="btn-floating halfway-fab waves-effect waves-light red" href="edit.html"><i class="material-icons">mode_edit</i></a>
           </div>
@@ -75,7 +75,7 @@
               <div class="col s6">
                 5
               </div>
-              
+
             </div>
           </div>
         </div>
