Fixed file paths and whitespace issues

--- a/views/hotels/index.ejs
+++ b/views/hotels/index.ejs
@@ -24,9 +24,9 @@
 
     <nav>
       <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">Hotel Property Manager</a>
+        <a href="/hotels" class="brand-logo">Hotel Property Manager</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="new.html">Add Hotel +</a></li>
+          <li><a href="/new">Add Hotel +</a></li>
         </ul>
       </div>
     </nav>
