--- a/views/hotels/new.ejs
+++ b/views/hotels/new.ejs
@@ -1,85 +1,87 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Hotel Manager</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Hotel Manager</title>
 
-<!-- Materialize CSS -->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
+    <!-- Materialize CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
 
-<!-- Application Styles -->
-<link rel="stylesheet" href="/css/style.css" />
+    <!-- Application Styles -->
+    <link rel="stylesheet" href="/css/style.css" />
 
-<!-- jQuery -->
-<script src="/libraries/jquery/jquery.min.js"></script>
+    <!-- jQuery -->
+    <script src="/libraries/jquery/jquery.min.js"></script>
 
-<!-- Materialize JS -->
-<script src="/libraries/materialize/js/materialize.min.js"></script>
+    <!-- Materialize JS -->
+    <script src="/libraries/materialize/js/materialize.min.js"></script>
 
-<!-- Application JS -->
-<script src="/js/app.js"></script>
-</head>
+    <!-- Application JS -->
+    <script src="/js/app.js"></script>
+  </head>
 <body>
 
-<nav>
-<div class="nav-wrapper">
-<a href="index.html" class="brand-logo">Hotel Property Manager</a>
-<ul id="nav-mobile" class="right hide-on-med-and-down">
-<li><a href="new.html">Add Hotel +</a></li>
-</ul>
-</div>
-</nav>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="index.html" class="brand-logo">Hotel Property Manager</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="/new">Add Hotel +</a></li>
+      </ul>
+    </div>
+  </nav>
 
-<div class="container margin-top-20">
-<div class="row">
-<div class="col s12">
-<div class="card">
-<div class="card-stacked">
-<div class="card-content">
-<div class="input-field">
-<input type="text" placeholder="Hotel Name" />
-</div>
+  <div class="container margin-top-20">
+    <div class="row">
+      <div class="col s12">
+        <div class="card">
+          <div class="card-stacked">
+            <div class="card-content">
+              <div class="input-field">
+              <input type="text" placeholder="Hotel Name" />
+              </div>
 
-<div class="input-field">
-<textarea placeholder="Hotel Description" class="materialize-textarea"></textarea>
-</div>
+              <div class="input-field">
+                <textarea placeholder="Hotel Description" class="materialize-textarea"></textarea>
+              </div>
 
-<div class="input-field">
-<input type="text" placeholder="Hotel Address" />
-</div>
+              <div class="input-field">
+                <input type="text" placeholder="Hotel Address" />
+              </div>
 
-<div class="input-field">
-<select>
-<option value="">Hotel Star Rating</option>
-<option value="1">1 Star</option>
-<option value="2">2 Stars</option>
-<option value="3">3 Stars</option>
-<option value="4">4 Stars</option>
-<option value="5">5 Stars</option>
-</select>
-</div>
+              <div class="input-field">
+                <select>
+                  <option value="">Hotel Star Rating</option>
+                  <option value="1">1 Star</option>
+                  <option value="2">2 Stars</option>
+                  <option value="3">3 Stars</option>
+                  <option value="4">4 Stars</option>
+                  <option value="5">5 Stars</option>
+                </select>
+              </div>
 
-<div class="input-field">
-<select>
-<option value="">Pet Friendly?</option>
-<option value="true">Yes</option>
-<option value="false">No</option>
-</select>
-</div>
+              <div class="input-field">
+                <select>
+                  <option value="">Pet Friendly?</option>
+                  <option value="true">Yes</option>
+                  <option value="false">No</option>
+                </select>
+              </div>
 
-<div class="input-field">
-<input type="text" placeholder="Hotel Image URL" />
-</div>
-</div>
-<div class="card-action">
-<button type="submit" class="waves-effect waves-light btn">Submit Hotel</button>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+              <div class="input-field">
+                <input type="text" placeholder="Hotel Image URL" />
+              </div>
+            </div>
+
+            <div class="card-action">
+              <button type="submit" class="waves-effect waves-light btn">Submit Hotel</button>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
