--- a/views/hotels/new.ejs
+++ b/views/hotels/new.ejs
@@ -24,9 +24,9 @@
 
   <nav>
     <div class="nav-wrapper">
-      <a href="index.html" class="brand-logo">Hotel Property Manager</a>
+      <a href="/hotels" class="brand-logo">Hotel Property Manager</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/new">Add Hotel +</a></li>
+        <li><a href="/hotels/new">Add Hotel +</a></li>
       </ul>
     </div>
   </nav>
@@ -76,7 +76,7 @@
             <div class="card-action">
               <button type="submit" class="waves-effect waves-light btn">Submit Hotel</button>
             </div>
-            
+
           </div>
         </div>
       </div>
