--- a/views/hotels/new.ejs
+++ b/views/hotels/new.ejs
@@ -30,7 +30,7 @@
       </ul>
     </div>
   </nav>
-  <form action="/actions" method="POST">
+  <form action="/hotels" method="POST">
     <div class="container margin-top-20">
       <div class="row">
         <div class="col s12">
@@ -38,16 +38,16 @@
             <div class="card-stacked">
               <div class="card-content">
                 <div class="input-field">
-                <input name="hotel_name" type="text" placeholder="Hotel Name" />
+                <input name="hotel[hotel_name]" type="text" placeholder="Hotel Name" />
                 </div>
                 <div class="input-field">
-                  <textarea name="hotel_description" placeholder="Hotel Description" class="materialize-textarea"></textarea>
+                  <textarea name="hotel[hotel_description]" placeholder="Hotel Description" class="materialize-textarea"></textarea>
                 </div>
                 <div class="input-field">
-                  <input name="hotel_address" type="text" placeholder="Hotel Address"/>
+                  <input name="hotel[hotel_address]" type="text" placeholder="Hotel Address"/>
                 </div>
                 <div class="input-field">
-                  <select name="star_rating">
+                  <select name="hotel[star_rating]">
                     <option value="">Hotel Star Rating</option>
                     <option value="1">1 Star</option>
                     <option value="2">2 Stars</option>
@@ -57,14 +57,14 @@
                   </select>
                 </div>
                 <div class="input-field">
-                  <select name="pet_friendly">
+                  <select name="hotel[pet_friendly]">
                     <option value="">Pet Friendly?</option>
                     <option value="true">Yes</option>
                     <option value="false">No</option>
                   </select>
                 </div>
                 <div class="input-field">
-                  <input name="hotel_image_url" type="text" placeholder="Hotel Image URL" />
+                  <input name="hotel[hotel_image_url]" type="text" placeholder="Hotel Image URL" />
                 </div>
               </div>
               <div class="card-action">
