--- a/views/hotels/index.ejs
+++ b/views/hotels/index.ejs
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hotel Manager</title>
+<head>
+  <meta charset="utf-8">
+  <title>Hotel Manager</title>
 
-    <!-- Materialize CSS -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
+  <!-- Materialize CSS -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
 
-    <!-- Application Styles -->
-    <link rel="stylesheet" href="/css/style.css" />
+  <!-- Application Styles -->
+  <link rel="stylesheet" href="/css/style.css" />
 
-    <!-- jQuery -->
-    <script src="/libraries/jquery/jquery.min.js"></script>
+  <!-- jQuery -->
+  <script src="/libraries/jquery/jquery.min.js"></script>
 
-    <!-- Materialize JS -->
-    <script src="/libraries/materialize/js/materialize.min.js"></script>
+  <!-- Materialize JS -->
+  <script src="/libraries/materialize/js/materialize.min.js"></script>
 
-    <!-- Application JS -->
-    <script src="/js/app.js"></script>
-  </head>
-  <body>
+  <!-- Application JS -->
+  <script src="/js/app.js"></script>
+</head>
+<body>
 
-    <nav>
-      <div class="nav-wrapper">
-        <a href="/hotels" class="brand-logo">Hotel Property Manager</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/hotels/new">Add Hotel +</a></li>
-        </ul>
-      </div>
-    </nav>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="/hotels" class="brand-logo">Hotel Property Manager</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="/hotels/new">Add Hotel +</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <div class="row">
-      <% hotels.forEach((hotel) => { %>
+  <div class="row">
+    <% hotels.forEach((hotel) => { %>
       <!-- One Hotel Card -->
       <div class="col s12 m3">
         <div class="card">
           <div class="card-image">
             <img src="<%= hotel.hotel_image_url %>">
             <span class="card-title"><%= hotel.hotel_name %></span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red" href="edit.html"><i class="material-icons">mode_edit</i></a>
+            <a class="btn-floating halfway-fab waves-effect waves-light red" href="/hotels/edit"><i class="material-icons">mode_edit</i></a>
           </div>
 
           <div class="card-content">
@@ -67,28 +67,28 @@
               <div class="col s6">
                 <% if (hotel.pet_friendly) { %>
                   Yes
-                <% } else { %>
-                  No
-                <% } %>
-              </div>
-            </div>
+                  <% } else { %>
+                    No
+                    <% } %>
+                  </div>
+                </div>
 
-            <div class="row margin-top-20">
-              <div class="col s6 bold">
-                Star Rating
-              </div>
-              <div class="col s6">
-                <%= hotel.star_rating %>
-              </div>
+                <div class="row margin-top-20">
+                  <div class="col s6 bold">
+                    Star Rating
+                  </div>
+                  <div class="col s6">
+                    <%= hotel.star_rating %>
+                  </div>
 
+                </div>
+              </div>
             </div>
           </div>
+          <!-- /One Hotel Card -->
+          <% }) %>
+
+
         </div>
-      </div>
-      <!-- /One Hotel Card -->
-      <% }) %>
-
-
-    </div>
-  </body>
-</html>
+      </body>
+      </html>
