--- a/views/hotels/index.ejs
+++ b/views/hotels/index.ejs
@@ -39,7 +39,7 @@
           <div class="card-image">
             <img src="<%= hotel.hotel_image_url %>">
             <span class="card-title"><%= hotel.hotel_name %></span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red" href="edit.html"><i class="material-icons">mode_edit</i></a>
+            <a class="btn-floating halfway-fab waves-effect waves-light red" href="hotels/<%=hotel.id%>"><i class="material-icons">mode_edit</i></a>
           </div>
 
           <div class="card-content">
